@@ -1,3 +1,4 @@
+5/11/12 #3327, migrate WavelengthControl bounds workaround to piccolo-phet
 5/11/12 #3322, code review: address comments in Solvent
 5/11/12 #3322, code review: improve javadoc for ConcentrationTransform
 5/11/12 #3322, code review: make solution base class abstract
