@@ -1,3 +1,4 @@
+Wavelength control layout adjustments related to fix #3327
 More tools tab: Fixed: Speed sensor resizes when readout changes
 # 1.02.00 (63000) Apr 3, 2012
 # 1.01.01 (62684) Mar 20, 2012
